fix grid gap to 20px and scale it on larger screen

--- a/src/components/genres/GenreList.module.css
+++ b/src/components/genres/GenreList.module.css
@@ -1,7 +1,13 @@
 .grid {
   display: grid;
-  gap: 1rem;
+  gap: 20px;
   grid-template-columns: repeat(8, 1fr);
-  grid-auto-rows:  80px;
+  grid-auto-rows: 80px;
+}
 
+/* Extra large devices (large laptops and desktops, 1200px and up) */
+@media only screen and (min-width: 1440px) {
+  .grid {
+    gap: 2%;
+  }
 }
